add_library(hydra-core
    horizon/const.hpp
    horizon/hid.hpp
    horizon/input_manager.cpp
    horizon/input_manager.hpp
    horizon/firmware.cpp
    horizon/firmware.hpp
    horizon/os.cpp
    horizon/os.hpp
    horizon/kernel/const.hpp
    horizon/kernel/applet_state.cpp
    horizon/kernel/applet_state.hpp
    horizon/kernel/auto_object.hpp
    horizon/kernel/strong_ref.hpp
    horizon/kernel/synchronization_object.cpp
    horizon/kernel/synchronization_object.hpp
    horizon/kernel/event.hpp
    horizon/kernel/shared_memory.cpp
    horizon/kernel/shared_memory.hpp
    horizon/kernel/transfer_memory.hpp
    horizon/kernel/code_memory.hpp
    horizon/kernel/thread.cpp
    horizon/kernel/thread.hpp
    horizon/kernel/guest_thread.cpp
    horizon/kernel/guest_thread.hpp
    horizon/kernel/host_thread.cpp
    horizon/kernel/host_thread.hpp
    horizon/kernel/process.cpp
    horizon/kernel/process.hpp
    horizon/kernel/process_manager.cpp
    horizon/kernel/process_manager.hpp
    horizon/kernel/hipc/const.cpp
    horizon/kernel/hipc/const.hpp
    horizon/kernel/hipc/cmif.hpp
    horizon/kernel/hipc/server_port.cpp
    horizon/kernel/hipc/server_port.hpp
    horizon/kernel/hipc/client_port.cpp
    horizon/kernel/hipc/client_port.hpp
    horizon/kernel/hipc/port.cpp
    horizon/kernel/hipc/port.hpp
    horizon/kernel/hipc/server_session.cpp
    horizon/kernel/hipc/server_session.hpp
    horizon/kernel/hipc/client_session.cpp
    horizon/kernel/hipc/client_session.hpp
    horizon/kernel/hipc/session.cpp
    horizon/kernel/hipc/session.hpp
    horizon/kernel/hipc/service_manager.hpp
    horizon/kernel/kernel.cpp
    horizon/kernel/kernel.hpp
    horizon/filesystem/const.hpp
    horizon/filesystem/entry_base.hpp
    horizon/filesystem/file_base.hpp
    horizon/filesystem/file_view.hpp
    horizon/filesystem/host_file.cpp
    horizon/filesystem/host_file.hpp
    horizon/filesystem/ram_file.hpp
    horizon/filesystem/directory.cpp
    horizon/filesystem/directory.hpp
    horizon/filesystem/device.cpp
    horizon/filesystem/device.hpp
    horizon/filesystem/filesystem.cpp
    horizon/filesystem/filesystem.hpp
    horizon/filesystem/partition_filesystem.hpp
    horizon/filesystem/content_archive.cpp
    horizon/filesystem/content_archive.hpp
    horizon/filesystem/romfs.cpp
    horizon/filesystem/romfs.hpp
    horizon/loader/loader_base.cpp
    horizon/loader/loader_base.hpp
    horizon/loader/nro_loader.cpp
    horizon/loader/nro_loader.hpp
    horizon/loader/nso_loader.cpp
    horizon/loader/nso_loader.hpp
    horizon/loader/nca_loader.cpp
    horizon/loader/nca_loader.hpp
    horizon/loader/nsp_loader.cpp
    horizon/loader/nsp_loader.hpp
    horizon/loader/xci_loader.cpp
    horizon/loader/xci_loader.hpp
    horizon/loader/homebrew_loader.cpp
    horizon/loader/homebrew_loader.hpp
    horizon/display/binder.cpp
    horizon/display/binder.hpp
    horizon/display/layer.cpp
    horizon/display/layer.hpp
    horizon/display/display.hpp
    horizon/display/driver.cpp
    horizon/display/driver.hpp
    horizon/services/const.hpp
    horizon/services/service.cpp
    horizon/services/service.hpp
    horizon/services/server.cpp
    horizon/services/server.hpp
    horizon/services/sm/user_interface.cpp
    horizon/services/sm/user_interface.hpp
    horizon/services/hid/applet_resource.cpp
    horizon/services/hid/applet_resource.hpp
    horizon/services/hid/active_vibration_device_list.cpp
    horizon/services/hid/active_vibration_device_list.hpp
    horizon/services/hid/hid_server.cpp
    horizon/services/hid/hid_server.hpp
    horizon/services/hid/hid_debug_server.cpp
    horizon/services/hid/hid_debug_server.hpp
    horizon/services/hid/hid_system_server.cpp
    horizon/services/hid/hid_system_server.hpp
    horizon/services/fssrv/storage.cpp
    horizon/services/fssrv/storage.hpp
    horizon/services/fssrv/file.cpp
    horizon/services/fssrv/file.hpp
    horizon/services/fssrv/directory.cpp
    horizon/services/fssrv/directory.hpp
    horizon/services/fssrv/filesystem.cpp
    horizon/services/fssrv/filesystem.hpp
    horizon/services/fssrv/save_data_info_reader.cpp
    horizon/services/fssrv/save_data_info_reader.hpp
    horizon/services/fssrv/filesystem_proxy.cpp
    horizon/services/fssrv/filesystem_proxy.hpp
    horizon/services/timesrv/internal/time_manager.cpp
    horizon/services/timesrv/internal/time_manager.hpp
    horizon/services/timesrv/static_service.cpp
    horizon/services/timesrv/static_service.hpp
    horizon/services/timesrv/system_clock.cpp
    horizon/services/timesrv/system_clock.hpp
    horizon/services/timesrv/steady_clock.cpp
    horizon/services/timesrv/steady_clock.hpp
    horizon/services/timesrv/time_zone_service.cpp
    horizon/services/timesrv/time_zone_service.hpp
    horizon/services/nvdrv/const.hpp
    horizon/services/nvdrv/nvdrv_services.cpp
    horizon/services/nvdrv/nvdrv_services.hpp
    horizon/services/nvdrv/ioctl/const.hpp
    horizon/services/nvdrv/ioctl/fd_base.hpp
    horizon/services/nvdrv/ioctl/channel_base.cpp
    horizon/services/nvdrv/ioctl/channel_base.hpp
    horizon/services/nvdrv/ioctl/nvmap.cpp
    horizon/services/nvdrv/ioctl/nvmap.hpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl.cpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl.hpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl_gpu.cpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl_gpu.hpp
    horizon/services/nvdrv/ioctl/nvhost_as_gpu.cpp
    horizon/services/nvdrv/ioctl/nvhost_as_gpu.hpp
    horizon/services/nvdrv/ioctl/nvhost_gpu.cpp
    horizon/services/nvdrv/ioctl/nvhost_gpu.hpp
    horizon/services/nvdrv/ioctl/nvhost_nvdec.cpp
    horizon/services/nvdrv/ioctl/nvhost_nvdec.hpp
    horizon/services/nvdrv/ioctl/nvhost_vic.cpp
    horizon/services/nvdrv/ioctl/nvhost_vic.hpp
    horizon/services/nvdrv/ioctl/nvhost_nvjpg.cpp
    horizon/services/nvdrv/ioctl/nvhost_nvjpg.hpp
    horizon/services/nvdrv/ioctl/nvsched_ctrl.cpp
    horizon/services/nvdrv/ioctl/nvsched_ctrl.hpp
    horizon/services/nvdrv/ioctl/nvdisp_ctrl.cpp
    horizon/services/nvdrv/ioctl/nvdisp_ctrl.hpp
    horizon/services/nvdrv/ioctl/nvdisp_disp.cpp
    horizon/services/nvdrv/ioctl/nvdisp_disp.hpp
    horizon/services/settings/nx_settings.cpp
    horizon/services/settings/nx_settings.hpp
    horizon/services/settings/settings_server.cpp
    horizon/services/settings/settings_server.hpp
    horizon/services/settings/system_settings_server.cpp
    horizon/services/settings/system_settings_server.hpp
    horizon/services/settings/factory_settings_server.cpp
    horizon/services/settings/factory_settings_server.hpp
    horizon/services/am/apm_manager.cpp
    horizon/services/am/apm_manager.hpp
    horizon/services/am/application_proxy_service.cpp
    horizon/services/am/application_proxy_service.hpp
    horizon/services/am/all_system_applet_proxies_service.cpp
    horizon/services/am/all_system_applet_proxies_service.hpp
    horizon/services/am/common_state_getter.cpp
    horizon/services/am/common_state_getter.hpp
    horizon/services/am/self_controller.cpp
    horizon/services/am/self_controller.hpp
    horizon/services/am/window_controller.cpp
    horizon/services/am/window_controller.hpp
    horizon/services/am/audio_controller.cpp
    horizon/services/am/audio_controller.hpp
    horizon/services/am/display_controller.cpp
    horizon/services/am/display_controller.hpp
    horizon/services/am/global_state_controller.cpp
    horizon/services/am/global_state_controller.hpp
    horizon/services/am/application_creator.cpp
    horizon/services/am/application_creator.hpp
    horizon/services/am/library_applet_controller.hpp
    horizon/services/am/library_applet_creator.cpp
    horizon/services/am/library_applet_creator.hpp
    horizon/services/am/library_applet_accessor.cpp
    horizon/services/am/library_applet_accessor.hpp
    horizon/services/am/library_applet_proxy.cpp
    horizon/services/am/library_applet_proxy.hpp
    horizon/services/am/library_applet_self_accessor.cpp
    horizon/services/am/library_applet_self_accessor.hpp
    horizon/services/am/system_applet_proxy.cpp
    horizon/services/am/system_applet_proxy.hpp
    horizon/services/am/application_functions.cpp
    horizon/services/am/application_functions.hpp
    horizon/services/am/home_menu_functions.cpp
    horizon/services/am/home_menu_functions.hpp
    horizon/services/am/debug_functions.cpp
    horizon/services/am/debug_functions.hpp
    horizon/services/am/process_winding_controller.cpp
    horizon/services/am/process_winding_controller.hpp
    horizon/services/am/application_proxy.cpp
    horizon/services/am/application_proxy.hpp
    horizon/services/am/overlay_applet_proxy.cpp
    horizon/services/am/overlay_applet_proxy.hpp
    horizon/services/am/overlay_functions.cpp
    horizon/services/am/overlay_functions.hpp
    horizon/services/am/proxy.cpp
    horizon/services/am/proxy.hpp
    horizon/services/am/storage.cpp
    horizon/services/am/storage.hpp
    horizon/services/am/storage_accessor.cpp
    horizon/services/am/storage_accessor.hpp
    horizon/services/am/session.cpp
    horizon/services/am/session.hpp
    horizon/services/visrv/display_service_base.cpp
    horizon/services/visrv/display_service_base.hpp
    horizon/services/visrv/system_display_service.cpp
    horizon/services/visrv/system_display_service.hpp
    horizon/services/visrv/manager_display_service.cpp
    horizon/services/visrv/manager_display_service.hpp
    horizon/services/visrv/application_display_service.cpp
    horizon/services/visrv/application_display_service.hpp
    horizon/services/visrv/manager_root_service.cpp
    horizon/services/visrv/manager_root_service.hpp
    horizon/services/visrv/system_root_service.cpp
    horizon/services/visrv/system_root_service.hpp
    horizon/services/visrv/application_root_service.cpp
    horizon/services/visrv/application_root_service.hpp
    horizon/services/hosbinder/parcel.hpp
    horizon/services/hosbinder/hos_binder_driver.cpp
    horizon/services/hosbinder/hos_binder_driver.hpp
    horizon/services/pl/shared_font_manager.cpp
    horizon/services/pl/shared_font_manager.hpp
    horizon/services/pl/internal/shared_font_manager.cpp
    horizon/services/pl/internal/shared_font_manager.hpp
    horizon/services/pl/detail/platform_service_manager_for_system.cpp
    horizon/services/pl/detail/platform_service_manager_for_system.hpp
    horizon/services/pl/sharedresource/platform_shared_resource_manager.cpp
    horizon/services/pl/sharedresource/platform_shared_resource_manager.hpp
    horizon/services/psm/psm_session.cpp
    horizon/services/psm/psm_session.hpp
    horizon/services/psm/psm_server.cpp
    horizon/services/psm/psm_server.hpp
    horizon/services/lm/log_service.cpp
    horizon/services/lm/log_service.hpp
    horizon/services/lm/logger.cpp
    horizon/services/lm/logger.hpp
    horizon/services/aocsrv/add_on_content_manager.cpp
    horizon/services/aocsrv/add_on_content_manager.hpp
    horizon/services/pctl/parental_control_service.cpp
    horizon/services/pctl/parental_control_service.hpp
    horizon/services/pctl/parental_control_service_factory.cpp
    horizon/services/pctl/parental_control_service_factory.hpp
    horizon/services/account/const.hpp
    horizon/services/account/profile.cpp
    horizon/services/account/profile.hpp
    horizon/services/account/notifier.cpp
    horizon/services/account/notifier.hpp
    horizon/services/account/account_service.cpp
    horizon/services/account/account_service.hpp
    horizon/services/account/account_service_for_administrator.cpp
    horizon/services/account/account_service_for_administrator.hpp
    horizon/services/account/account_service_for_application.cpp
    horizon/services/account/account_service_for_application.hpp
    horizon/services/account/account_service_for_system_service.cpp
    horizon/services/account/account_service_for_system_service.hpp
    horizon/services/account/baas_access_token_accessor.cpp
    horizon/services/account/baas_access_token_accessor.hpp
    horizon/services/account/baas/manager_for_application.cpp
    horizon/services/account/baas/manager_for_application.hpp
    horizon/services/account/baas/manager_for_system_service.cpp
    horizon/services/account/baas/manager_for_system_service.hpp
    horizon/services/account/internal/user.hpp
    horizon/services/account/internal/user_manager.cpp
    horizon/services/account/internal/user_manager.hpp
    horizon/services/apm/manager_privileged.cpp
    horizon/services/apm/manager_privileged.hpp
    horizon/services/apm/session.cpp
    horizon/services/apm/session.hpp
    horizon/services/socket/client.cpp
    horizon/services/socket/client.hpp
    horizon/services/socket/resolver/resolver.cpp
    horizon/services/socket/resolver/resolver.hpp
    horizon/services/audio/const.hpp
    horizon/services/audio/audio_device.cpp
    horizon/services/audio/audio_device.hpp
    horizon/services/audio/audio_out.cpp
    horizon/services/audio/audio_out.hpp
    horizon/services/audio/audio_out_manager.cpp
    horizon/services/audio/audio_out_manager.hpp
    horizon/services/audio/audio_renderer.cpp
    horizon/services/audio/audio_renderer.hpp
    horizon/services/audio/audio_renderer_manager.cpp
    horizon/services/audio/audio_renderer_manager.hpp
    horizon/services/ssl/sf/const.hpp
    horizon/services/ssl/sf/ssl_context.cpp
    horizon/services/ssl/sf/ssl_context.hpp
    horizon/services/ssl/sf/ssl_service.cpp
    horizon/services/ssl/sf/ssl_service.hpp
    horizon/services/spl/random_interface.cpp
    horizon/services/spl/random_interface.hpp
    horizon/services/spl/general_interface.cpp
    horizon/services/spl/general_interface.hpp
    horizon/services/nifm/static_service.cpp
    horizon/services/nifm/static_service.hpp
    horizon/services/nifm/general_service.cpp
    horizon/services/nifm/general_service.hpp
    horizon/services/nifm/request.cpp
    horizon/services/nifm/request.hpp
    horizon/services/pcv/pcv_service.cpp
    horizon/services/pcv/pcv_service.hpp
    horizon/services/friends/service_creator.cpp
    horizon/services/friends/service_creator.hpp
    horizon/services/friends/friend_service.cpp
    horizon/services/friends/friend_service.hpp
    horizon/services/friends/notification_service.cpp
    horizon/services/friends/notification_service.hpp
    horizon/services/ts/measurement_server.cpp
    horizon/services/ts/measurement_server.hpp
    horizon/services/nfc/nfc.cpp
    horizon/services/nfc/nfc.hpp
    horizon/services/nfc/user.cpp
    horizon/services/nfc/user.hpp
    horizon/services/nfc/user_manager.cpp
    horizon/services/nfc/user_manager.hpp
    horizon/services/nfp/nfp.cpp
    horizon/services/nfp/nfp.hpp
    horizon/services/nfp/user.cpp
    horizon/services/nfp/user.hpp
    horizon/services/nfp/user_manager.cpp
    horizon/services/nfp/user_manager.hpp
    horizon/services/prepo/prepo_service.cpp
    horizon/services/prepo/prepo_service.hpp
    horizon/services/codec/hardware_opus_decoder.cpp
    horizon/services/codec/hardware_opus_decoder.hpp
    horizon/services/codec/hardware_opus_decoder_manager.cpp
    horizon/services/codec/hardware_opus_decoder_manager.hpp
    horizon/services/ncm/const.hpp
    horizon/services/ncm/content_manager.cpp
    horizon/services/ncm/content_manager.hpp
    horizon/services/mmnv/request.cpp
    horizon/services/mmnv/request.hpp
    horizon/services/err/context/writer_for_application.cpp
    horizon/services/err/context/writer_for_application.hpp
    horizon/services/oe/const.hpp
    horizon/services/mii/database_service.cpp
    horizon/services/mii/database_service.hpp
    horizon/services/mii/static_service.cpp
    horizon/services/mii/static_service.hpp
    horizon/services/fatalsrv/service.cpp
    horizon/services/fatalsrv/service.hpp
    horizon/services/ns/const.cpp
    horizon/services/ns/const.hpp
    horizon/services/ns/application_manager_interface.cpp
    horizon/services/ns/application_manager_interface.hpp
    horizon/services/ns/service_getter_interface.cpp
    horizon/services/ns/service_getter_interface.hpp
    horizon/services/lbl/lbl_controller.cpp
    horizon/services/lbl/lbl_controller.hpp
    horizon/services/nsd/manager.cpp
    horizon/services/nsd/manager.hpp
    horizon/services/ovln/sender_service.cpp
    horizon/services/ovln/sender_service.hpp
    horizon/services/ovln/sender.cpp
    horizon/services/ovln/sender.hpp
    horizon/services/psc/pm_service.cpp
    horizon/services/psc/pm_service.hpp
    horizon/services/psc/pm_module.cpp
    horizon/services/psc/pm_module.hpp
    horizon/services/pdm/query_service.cpp
    horizon/services/pdm/query_service.hpp
    horizon/services/npns/npns_system.cpp
    horizon/services/npns/npns_system.hpp
    horizon/services/i2c/const.hpp
    horizon/services/i2c/manager.cpp
    horizon/services/i2c/manager.hpp
    horizon/services/i2c/session.cpp
    horizon/services/i2c/session.hpp
    horizon/services/pm/boot_mode_interface.cpp
    horizon/services/pm/boot_mode_interface.hpp
    horizon/services/pm/information_interface.cpp
    horizon/services/pm/information_interface.hpp
    horizon/services/pm/debug_monitor_interface.cpp
    horizon/services/pm/debug_monitor_interface.hpp
    horizon/services/spsm/power_state_interface.cpp
    horizon/services/spsm/power_state_interface.hpp
    horizon/services/usb/const.hpp
    horizon/services/usb/hs/client_root_session.cpp
    horizon/services/usb/hs/client_root_session.hpp
    horizon/services/omm/operation_mode_manager.cpp
    horizon/services/omm/operation_mode_manager.hpp
    horizon/services/ins/receiver_manager.cpp
    horizon/services/ins/receiver_manager.hpp
    horizon/services/irsensor/ir_sensor_server.cpp
    horizon/services/irsensor/ir_sensor_server.hpp
    horizon/services/ro/detail/ro_interface.cpp
    horizon/services/ro/detail/ro_interface.hpp
    horizon/applets/const.hpp
    horizon/applets/applet_base.cpp
    horizon/applets/applet_base.hpp
    horizon/applets/error/const.hpp
    horizon/applets/error/applet.cpp
    horizon/applets/error/applet.hpp
    horizon/applets/software_keyboard/const.hpp
    horizon/applets/software_keyboard/applet.cpp
    horizon/applets/software_keyboard/applet.hpp
    horizon/applets/mii_edit/const.hpp
    horizon/applets/album/const.hpp
    horizon/applets/controller/const.hpp
    horizon/applets/controller/applet.cpp
    horizon/applets/controller/applet.hpp
    horizon/applets/player_select/const.hpp
    horizon/applets/player_select/applet.cpp
    horizon/applets/player_select/applet.hpp
    horizon/ui/const.hpp
    horizon/ui/handler_base.hpp
    audio/const.hpp
    audio/stream.hpp
    audio/core.hpp
    audio/null/stream.cpp
    audio/null/stream.hpp
    audio/null/core.cpp
    audio/null/core.hpp
    hw/generic_mmu.hpp
    hw/tegra_x1/cpu/const.hpp
    hw/tegra_x1/cpu/memory.hpp
    hw/tegra_x1/cpu/mmu.cpp
    hw/tegra_x1/cpu/mmu.hpp
    hw/tegra_x1/cpu/thread.cpp
    hw/tegra_x1/cpu/thread.hpp
    hw/tegra_x1/cpu/cpu.cpp
    hw/tegra_x1/cpu/cpu.hpp
    hw/tegra_x1/cpu/dynarmic/const.hpp
    hw/tegra_x1/cpu/dynarmic/memory.hpp
    hw/tegra_x1/cpu/dynarmic/mmu.cpp
    hw/tegra_x1/cpu/dynarmic/mmu.hpp
    hw/tegra_x1/cpu/dynarmic/thread.cpp
    hw/tegra_x1/cpu/dynarmic/thread.hpp
    hw/tegra_x1/cpu/dynarmic/cpu.cpp
    hw/tegra_x1/cpu/dynarmic/cpu.hpp
    hw/tegra_x1/gpu/const.hpp
    hw/tegra_x1/gpu/memory_util.cpp
    hw/tegra_x1/gpu/memory_util.hpp
    hw/tegra_x1/gpu/gmmu.cpp
    hw/tegra_x1/gpu/gmmu.hpp
    hw/tegra_x1/gpu/pfifo.cpp
    hw/tegra_x1/gpu/pfifo.hpp
    hw/tegra_x1/gpu/gpu.cpp
    hw/tegra_x1/gpu/gpu.hpp
    hw/tegra_x1/gpu/engines/const.hpp
    hw/tegra_x1/gpu/engines/engine_base.hpp
    hw/tegra_x1/gpu/engines/inline_base.cpp
    hw/tegra_x1/gpu/engines/inline_base.hpp
    hw/tegra_x1/gpu/engines/3d.cpp
    hw/tegra_x1/gpu/engines/3d.hpp
    hw/tegra_x1/gpu/engines/compute.cpp
    hw/tegra_x1/gpu/engines/compute.hpp
    hw/tegra_x1/gpu/engines/inline.cpp
    hw/tegra_x1/gpu/engines/inline.hpp
    hw/tegra_x1/gpu/engines/2d.cpp
    hw/tegra_x1/gpu/engines/2d.hpp
    hw/tegra_x1/gpu/engines/copy.cpp
    hw/tegra_x1/gpu/engines/copy.hpp
    hw/tegra_x1/gpu/macro/const.hpp
    hw/tegra_x1/gpu/macro/driver_base.cpp
    hw/tegra_x1/gpu/macro/driver_base.hpp
    hw/tegra_x1/gpu/macro/interpreter/driver.cpp
    hw/tegra_x1/gpu/macro/interpreter/driver.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/const.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/const.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/decompiler.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/decompiler.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/ir/value.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/ir/instruction.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/ir/block.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/ir/function.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/ir/builder.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/decoder/tables.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/decoder/decoder.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/decoder/decoder.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/analyzer/memory_analyzer.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/analyzer/memory_analyzer.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/analyzer/cfg.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/analyzer/cfg.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/codegen/emitter.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/codegen/emitter.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/codegen/emitter.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/codegen/lang/emitter.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/codegen/lang/emitter.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/codegen/lang/msl/emitter.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/codegen/lang/msl/emitter.hpp
    hw/tegra_x1/gpu/renderer/const.cpp
    hw/tegra_x1/gpu/renderer/const.hpp
    hw/tegra_x1/gpu/renderer/buffer_base.hpp
    hw/tegra_x1/gpu/renderer/buffer_cache.cpp
    hw/tegra_x1/gpu/renderer/buffer_cache.hpp
    hw/tegra_x1/gpu/renderer/texture_base.hpp
    hw/tegra_x1/gpu/renderer/texture_decoder.cpp
    hw/tegra_x1/gpu/renderer/texture_decoder.hpp
    hw/tegra_x1/gpu/renderer/texture_cache.cpp
    hw/tegra_x1/gpu/renderer/texture_cache.hpp
    hw/tegra_x1/gpu/renderer/sampler_base.hpp
    hw/tegra_x1/gpu/renderer/sampler_cache.cpp
    hw/tegra_x1/gpu/renderer/sampler_cache.hpp
    hw/tegra_x1/gpu/renderer/render_pass_base.hpp
    hw/tegra_x1/gpu/renderer/render_pass_cache.cpp
    hw/tegra_x1/gpu/renderer/render_pass_cache.hpp
    hw/tegra_x1/gpu/renderer/shader_base.hpp
    hw/tegra_x1/gpu/renderer/shader_cache.cpp
    hw/tegra_x1/gpu/renderer/shader_cache.hpp
    hw/tegra_x1/gpu/renderer/pipeline_base.hpp
    hw/tegra_x1/gpu/renderer/pipeline_cache.cpp
    hw/tegra_x1/gpu/renderer/pipeline_cache.hpp
    hw/tegra_x1/gpu/renderer/index_cache.cpp
    hw/tegra_x1/gpu/renderer/index_cache.hpp
    hw/tegra_x1/gpu/renderer/renderer_base.hpp
    hw/tegra_x1/gpu/renderer/metal/const.hpp
    hw/tegra_x1/gpu/renderer/metal/maxwell_to_mtl.cpp
    hw/tegra_x1/gpu/renderer/metal/maxwell_to_mtl.hpp
    hw/tegra_x1/gpu/renderer/metal/impl.cpp
    hw/tegra_x1/gpu/renderer/metal/buffer.cpp
    hw/tegra_x1/gpu/renderer/metal/buffer.hpp
    hw/tegra_x1/gpu/renderer/metal/texture.cpp
    hw/tegra_x1/gpu/renderer/metal/texture.hpp
    hw/tegra_x1/gpu/renderer/metal/sampler.cpp
    hw/tegra_x1/gpu/renderer/metal/sampler.hpp
    hw/tegra_x1/gpu/renderer/metal/render_pass.cpp
    hw/tegra_x1/gpu/renderer/metal/render_pass.hpp
    hw/tegra_x1/gpu/renderer/metal/shader.cpp
    hw/tegra_x1/gpu/renderer/metal/shader.hpp
    hw/tegra_x1/gpu/renderer/metal/pipeline.cpp
    hw/tegra_x1/gpu/renderer/metal/pipeline.hpp
    hw/tegra_x1/gpu/renderer/metal/depth_stencil_state_cache.cpp
    hw/tegra_x1/gpu/renderer/metal/depth_stencil_state_cache.hpp
    hw/tegra_x1/gpu/renderer/metal/blit_pipeline_cache.cpp
    hw/tegra_x1/gpu/renderer/metal/blit_pipeline_cache.hpp
    hw/tegra_x1/gpu/renderer/metal/clear_color_pipeline_cache.cpp
    hw/tegra_x1/gpu/renderer/metal/clear_color_pipeline_cache.hpp
    hw/tegra_x1/gpu/renderer/metal/clear_depth_pipeline_cache.cpp
    hw/tegra_x1/gpu/renderer/metal/clear_depth_pipeline_cache.hpp
    hw/tegra_x1/gpu/renderer/metal/renderer.cpp
    hw/tegra_x1/gpu/renderer/metal/renderer.hpp
    input/const.hpp
    input/device.hpp
    input/keyboard.hpp
    input/controller.hpp
    input/cursor.hpp
    input/npad_config.cpp
    input/npad_config.hpp
    input/device_list.hpp
    input/device_manager.cpp
    input/device_manager.hpp
    input/apple_gc/keyboard.mm
    input/apple_gc/keyboard.hpp
    input/apple_gc/controller.mm
    input/apple_gc/controller.hpp
    input/apple_gc/device_list.mm
    input/apple_gc/device_list.hpp
    # TODO: only build the debugger on debug builds
    debugger/gdb_server.cpp
    debugger/gdb_server.hpp
    debugger/debugger.cpp
    debugger/debugger.hpp
    debugger/debugger_manager.cpp
    debugger/debugger_manager.hpp
    emulation_context.cpp
    emulation_context.hpp
    title.hpp
    c_api.cpp
    c_api.h
)

if (HYPERVISOR_ENABLED)
    target_sources(hydra-core PRIVATE
        hw/tegra_x1/cpu/hypervisor/const.hpp
        hw/tegra_x1/cpu/hypervisor/page_allocator.cpp
        hw/tegra_x1/cpu/hypervisor/page_allocator.hpp
        hw/tegra_x1/cpu/hypervisor/page_table.cpp
        hw/tegra_x1/cpu/hypervisor/page_table.hpp
        hw/tegra_x1/cpu/hypervisor/memory.hpp
        hw/tegra_x1/cpu/hypervisor/mmu.cpp
        hw/tegra_x1/cpu/hypervisor/mmu.hpp
        hw/tegra_x1/cpu/hypervisor/thread.cpp
        hw/tegra_x1/cpu/hypervisor/thread.hpp
        hw/tegra_x1/cpu/hypervisor/cpu.cpp
        hw/tegra_x1/cpu/hypervisor/cpu.hpp
    )
endif ()

if (CUBEB_ENABLED)
    target_sources(hydra-core PRIVATE
        audio/cubeb/const.hpp
        audio/cubeb/stream.cpp
        audio/cubeb/stream.hpp
        audio/cubeb/core.cpp
        audio/cubeb/core.hpp
    )
endif ()

target_include_directories(hydra-core PRIVATE ${CMAKE_SOURCE_DIR}/externals/libyaz0/include)

# TODO: only link Apple frameworks if Apple
target_link_libraries(hydra-core PRIVATE "-framework Foundation" "-framework Metal" "-framework QuartzCore" "-framework GameController" dynarmic hatch libyaz0 nx2elf hydra-common)

if (HYPERVISOR_ENABLED)
    target_link_libraries(hydra-core PRIVATE "-framework Hypervisor")
endif ()

if (CUBEB_ENABLED)
    target_link_libraries(hydra-core PRIVATE cubeb)
endif ()

# TODO: link luft if AIR shader backend is enabled
